--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: cloud-zipkin
   zipkin:
-    base-url: http://localhost:9411/
+    base-url: http://192.168.5.4:9411/
 logging:
   level:
     web: debug
