--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,19 +4,10 @@ server:
 spring:
   application:
     name: cloud-zipkin
-  zipkin:
-    sender:
-      type: kafka
-    kafka:
-      topic: zipkin
-  kafka:
-    # http://192.168.5.4:8048/topic/meta/zipkin/
-    bootstrap-servers: 192.168.5.4:9092
-  sleuth:
-    # 与采样相关的属性。
-    sampler:
-      # 应该采样的请求的概率。 例如，应该对 1.0 - 100% 的请求进行抽样。 精度仅为整数（即不支持 0.1% 的迹线）
-      probability: 1.0
+  profiles:
+    active:
+      # - zipkin # 仅 zipkin
+      - zipkin-kafka # zipkin 与 kafka
 logging:
   level:
     web: debug
